--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,7 +56,7 @@
     "max-len":[
       "warn",
       {
-        "code":80
+        "code":120
       }
     ],
     "react-hooks/rules-of-hooks":"error",
@@ -66,10 +66,8 @@
     "react/react-in-jsx-scope": "off"
   },
   "settings":{
-    "import/resolver":{
-      "typescript":{
-
-      }
+    "import/resolver": {
+      "typescript": {}
     }
   }
 }
